@@ -15,8 +15,8 @@
 
 class DataConverter_HTMLString
 {
-    private $autolink = false;
-    private $noescape = false;
+    protected $autolink = false;
+    protected $noescape = false;
 
     public function __construct($option = false)
     {
@@ -38,19 +38,32 @@ class DataConverter_HTMLString
     public function converterFromDBtoUser($str)
     {
         if (!$this->noescape) {
-            $str = str_replace(">", "&gt;",
-                str_replace("<", "&lt;",
-                    str_replace("'", "&#39;",
-                        str_replace('"', "&quot;",
-                            str_replace("&", "&amp;", $str)))));
+            $str = $this->replaceTags($str);
         }
-        $str = str_replace("\n", "<br />",
-            str_replace("\r", "<br />",
-                str_replace("\r\n", "<br />", $str)));
+        $str = $this->replaceCRLF($str);
         if ($this->autolink) {
-            $str = mb_ereg_replace("(https?|ftp)(:\\/\\/[-_.!~*\\'()a-zA-Z0-9;\\/?:\\@&=+\\$,%#]+)",
-                "<a href=\"\\0\" target=\"_blank\">\\0</a>", $str, "i");
+            $str = $this->replaceLinkToATag($str);
         }
         return $str;
+    }
+
+    protected function replaceTags($str)    {
+        return str_replace(">", "&gt;",
+            str_replace("<", "&lt;",
+                str_replace("'", "&#39;",
+                    str_replace('"', "&quot;",
+                        str_replace("&", "&amp;", $str)))));
+
+    }
+
+    protected function replaceCRLF($str)    {
+        return str_replace("\n", "<br />",
+            str_replace("\r", "<br />",
+                str_replace("\r\n", "<br />", $str)));
+    }
+
+    protected function replaceLinkToATag($str)  {
+        return mb_ereg_replace("(https?|ftp)(:\\/\\/[-_.!~*\\'()a-zA-Z0-9;\\/?:\\@&=+\\$,%#]+)",
+            "<a href=\"\\0\" target=\"_blank\">\\0</a>", $str, "i");
     }
 }
