@@ -645,6 +645,27 @@ var Parser = (function (scope) {
         return result;
     }
 
+    function itemIndexOfFunc(list, str)    {
+        var a = list.replace("\r\n", "\n").replace("\r", "\n");
+        var ix = 0;
+        var item, pos;
+        while (a.length > 0)    {
+            pos = a.indexOf("\n");
+            if (pos > -1) {
+                item = a.substr(0,pos);
+                a = a.substr(pos + 1);
+            } else {
+                item = a;
+                a = "";
+            }
+            if (item == str)    {
+                return ix;
+            }
+            ix++;
+        }
+        return -1;
+    }
+
     function numberformat(val, digit) {
         var stra, strb;
         stra = (val instanceof Array) ? val.join() : val;
@@ -726,6 +747,13 @@ var Parser = (function (scope) {
         stra = (str instanceof Array) ? str.join() : str;
         p = (pattern instanceof Array) ? pattern.join() : pattern;
         return stra.match(new RegExp(p));
+    }
+
+    function test(str, pattern) {
+        var stra, p;
+        stra = (str instanceof Array) ? str.join() : str;
+        p = (pattern instanceof Array) ? pattern.join() : pattern;
+        return (new RegExp(p)).test(stra);
     }
 
     Parser.timeOffset = (new Date()).getTimezoneOffset();
@@ -1046,6 +1074,7 @@ var Parser = (function (scope) {
             "replace": replace,
             "substitute": substitute,
             "match": match,
+            "test": test,
             "sin": Math.sin,
             "cos": Math.cos,
             "tan": Math.tan,
@@ -1108,7 +1137,8 @@ var Parser = (function (scope) {
             "now": nowFunction,
             "right": rightstring,
             "mid": midstring,
-            "left": leftstring
+            "left": leftstring,
+            "itemIndexOf": itemIndexOfFunc
         };
 
         this.consts = {
