@@ -56,6 +56,8 @@ Ver.5.3 (in development)
   Previously it was just a key field value of new record.
 - Avoid outputting messages in an error log file if there is no portal objects on the layout when using 
   FileMaker Server.
+- Functions for expression are added: match, test, itemIndexOf.
+- The DataConverter_MarkdownString class is added.
 - [BUG FIX] Fix detection of params.php file.
 - [BUG FIX] Fix loading DB_TextFile class. The affected version is 5.2 only.
 - [BUG FIX] Modify INTERMediator.totalRecordCount after IMLibPageNavigation.deleteRecordFromNavi method.
